# oma

./: .bazelrc  .gitattributes  .gitignore  MODULE.bazel  README.md  pnpm-lock.yaml
.codex/: setup.sh
.devcontainer/: Dockerfile  devcontainer.json
bazel/data/: BUILD.bazel  extension.bzl  labels.bzl  repo.bzl  validation.bzl
bazel/data/templates/: BUILD.archive.tmpl.bazel  BUILD.archive_extract.tmpl.bazel  BUILD.bazel  BUILD.file.tmpl.bazel  oma_data_artifact.tmpl.bzl
bazel/data/templates/metadata/: BUILD.tmpl.bazel
bazel/data/tests/: BUILD.bazel  validation_tests.bzl
bazel/data/tests/integration/: BUILD.bazel  metadata_tests.bzl
data/line_detection/cam_waterlines/: BUILD.bazel
docs/: oma_data.md
exporters/: defs.bzl
extractors/line_detection/: BUILD.bazel  README.md  defs.bzl  detect_lines.py  line_detection.bzl  overlay_runner.sh.tpl  pipeline_utils.py  requirements.txt  visualize_overlay.py
extractors/line_detection/artifact/: BUILD.bazel  README.md  artifact_mask.py  rules.bzl
extractors/line_detection/binarize/: BUILD.bazel  README.md  binarize_mask.py  rules.bzl
extractors/line_detection/morphology/: BUILD.bazel  README.md  morphology_filter.py  rules.bzl
extractors/line_detection/segment/: BUILD.bazel  README.md  rules.bzl  segment_lines.py
extractors/line_detection/skeleton/: BUILD.bazel  README.md  rules.bzl  skeletonize_mask.py
extractors/line_detection/topology/: BUILD.bazel  README.md  rules.bzl  topology_cleanup.py
extractors/line_detection/vectorize/: BUILD.bazel  README.md  rules.bzl  vectorize_skeleton.py
scripts/: devcontainer-setup.sh
tools/import_data/: BUILD.bazel  import_data.mjs
tools/previewer/: BUILD.bazel  README.md  preview_pass.py  preview_rules.bzl  preview_utils.py
web/: BUILD.bazel  astro_cli.mjs  package-lock.json  package.json
web/src/components/: ComunePopupCard.tsx  Dashboard.tsx  DatasetTabs.tsx  Footer.astro  Header.astro  KpiBar.tsx  MapPanel.tsx  Sidebar.astro
web/src/data/: provider.ts  types.ts
web/src/data/mock/: comune.ts  datasets.ts  navigation.ts  sidebar.ts
web/src/i18n/: index.ts  it.ts
web/src/layouts/: BaseLayout.astro
web/src/pages/: index.astro
web/src/styles/: global.css
web/src/utils/: format.ts
