bazel_dep(name = "aspect_rules_js", version = "2.8.3")
bazel_dep(name = "rules_nodejs", version = "6.3.0")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
pnpm.pnpm(name = "pnpm")
use_repo(pnpm, "pnpm", "pnpm__links")


npm = use_extension(
    "@aspect_rules_js//npm:extensions.bzl",
    "npm",
    dev_dependency = True,
)
npm.npm_translate_lock(
    name = "npm",
    generate_bzl_library_targets = True,
    npmrc = "//:.npmrc",
    pnpm_lock = "//:pnpm-lock.yaml",
    update_pnpm_lock = True,
    verify_node_modules_ignored = "//:.bazelignore",
    data = [
        "//:pnpm-workspace.yaml",
        "//web:package.json",
    ],
)

use_repo(
    npm,
    "npm",
)

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(node_version = "20.17.0")
use_repo(node, "nodejs_toolchains")

register_toolchains("@nodejs_toolchains//:linux_amd64_toolchain_target")
register_toolchains("@nodejs_toolchains//:linux_amd64_toolchain")
