load(":line_detection.bzl", "line_detection_geojson")
load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

exports_files(["overlay_runner.sh.tpl"])

py_binary(
    name = "detect_lines",
    srcs = ["detect_lines.py"],
    deps = [
        requirement("numpy"),
        requirement("opencv-python-headless"),
        requirement("shapely"),
    ],
)

py_binary(
    name = "visualize_overlay",
    srcs = ["visualize_overlay.py"],
)

line_detection_geojson(
    name = "cam_waterlines_geojson",
    image = "@oma_data_oma_cam_waterlines_map//:artifact",
    bbox = ["0", "0", "1200", "958"],
    polygon = "0,0 1200,0 1200,958 0,958",
    lower_hsv = "100,50,50",
    upper_hsv = "140,255,255",
    simplify = "0.002",
    out = "cam_waterlines.geojson",
    visibility = ["//visibility:public"],
)
