load(":line_detection.bzl", "line_detection_geojson")
load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

exports_files(["overlay_runner.sh.tpl"])

py_library(
    name = "pipeline_utils",
    srcs = ["pipeline_utils.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("numpy"),
        requirement("opencv-python-headless"),
    ],
)

py_binary(
    name = "detect_lines",
    srcs = ["detect_lines.py"],
    deps = [
        requirement("numpy"),
        requirement("opencv-python-headless"),
        requirement("shapely"),
    ],
)

py_binary(
    name = "visualize_overlay",
    srcs = ["visualize_overlay.py"],
    deps = [
        requirement("opencv-python-headless"),
    ],
)
