load(":oma_data_artifact.bzl", "oma_data_artifact")

package(default_visibility = ["//visibility:public"])

alias(
    name = "package_metadata",
    actual = "//metadata:package_metadata",
)

%{license_aliases}

filegroup(
    name = "archive_files",
    srcs = ["%{archive_name}"],
)

oma_data_artifact(
    name = "archive",
    srcs = [":archive_files"],
    package_metadata = ["//metadata:package_metadata"],
)

filegroup(
    name = "extracted_files",
    srcs = glob(["extracted/**"]),
)

oma_data_artifact(
    name = "extracted",
    srcs = [":extracted_files"],
    package_metadata = ["//metadata:package_metadata"],
)
