load(":oma_data_artifact.bzl", "oma_data_artifact")

package(default_visibility = ["//visibility:public"])

alias(
    name = "package_metadata",
    actual = "//metadata:package_metadata",
)

%{license_aliases}

filegroup(
    name = "artifact_files",
    srcs = ["artifact.data"],
)

oma_data_artifact(
    name = "artifact",
    srcs = [":artifact_files"],
    package_metadata = ["//metadata:package_metadata"],
)
