load("@pypi//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

exports_files(["rules.bzl"])

py_binary(
    name = "segment_lines",
    srcs = ["segment_lines.py"],
    deps = [
        "//extractors/line_detection:pipeline_utils",
        requirement("numpy"),
        requirement("opencv-python-headless"),
    ],
)
