load("@package_metadata//licenses/rules:license.bzl", "license")
load("@package_metadata//rules:package_metadata.bzl", "package_metadata")

package(default_visibility = ["//visibility:public"])

%{license_block}

package_metadata(
    name = "package_metadata",
    purl = "%{purl}",
    attributes = %{package_metadata_attributes},
    visibility = ["//visibility:public"],
)
